# hospital-smart-assistant

./: Dockerfile  README.md  alembic.ini  codecov.yml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
alembic/: env.py
alembic/versions/: 126d1d17d6ce_inisialisasi_tabel.py
app/: config.py  exceptions.py  main.py
app/api/: deps.py
app/api/endpoints/: profile.py
app/domain/: pasien.py
app/models/: __init__.py
app/models/base/: admin.py  base_model.py  dokter.py  jadwal_praktik.py  pasien.py  pesan_chat.py  sesi_chat.py  sesi_konsultasi.py
app/models/rag/: chunk_dokumen.py  consts.py  dokumen.py
app/repositories/: __init__.py  dokter_repository.py  in_memory_repository.py  interfaces.py
app/schemas/: dokter.py  pasien_schema.py
app/services/: __init__.py  dokter_service.py  ingest.py  pasien_profile_service.py  retriever.py  run_ingest.py
app/tests/: conftest.py  models_test.py  test_auth.py  test_auth_endpoints.py  test_dokter_endpoints.py  test_dokter_registration.py  test_ingest.py  test_main.py  test_main_error_branches.py  test_pasien_schema.py  test_pasien_service.py  test_profile_endpoint.py  test_retriever.py
data/: RAG_Direktori_Asuransi.txt  RAG_FAQ_Fasilitas_RS.txt  RAG_SOP_BPJS_Rujukan.txt
