[project]
name = "hospital-smart-assistant"
version = "0.1.0"
description = "Hospital smart assistant API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.15.4",
]
